About: A p5.js tropical cyclone simulation game

v20190630a:
    + Added ability to save basins with a custom name using a text box
    * Finished the full switch from localStorage to indexedDB
        > Basins and seasons are now stored in indexedDB
        > Saving no longer limited by the localStorage 5 MB limit (Cyclone Sim can now theoretically save up to 10% of drive space)
    * You can now save an unlimited number of basins
        > Load menu UI updated with pages
    * Saved basins and seasons upgraded to Format 2, which is more efficient and less hacky than the localStorage-limited Format 1
v20190622a:
    * Mostly prepared the simulator for asynchronous saving/loading which will come later with the full transition to indexedDB
    * Some tweaks to input UI
v20190617a:
    * Mostly finished text input UI code for text boxes to be added in later updates
v20190615a:
    * Cleaned up some of the repetative UI code, particularly in the case of buttons
v20190613a:
    + Added partial support for indexedDB saving/loading
        > Currently only used to store settings, while localStorage is still used for basins and seasons
        > Full transition coming in a later update
    + Added new waiting screen (with animated loading ring) for asynchronous tasks
        > Not used for rendering as that is single-threaded
    * Various code optimizations for the upcoming switch to storing basins and seasons in indexedDB
    % Added Dexie.js for an easier indexedDB API
v20190606a:
    + Added NIO, SWIO, SPac, SAtl, Jakarta, and Port Moresby name lists
        > Jakarta and Port Moresby lists are not included in Aus, but completely separate lists for now
    + Added "No Tracks" track mode
    * Updated WPac list preset to reflect the retirement and replacement of 2017 storm names
        > Only affects newly created basins
    * Fixed a couple track updating bugs:
        > New track segments getting drawn for non-selected storms while a storm is selected